unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Latitude__c</fullName>
        <formula>BillingLatitude</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Latitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Longitude__c</fullName>
        <formula>BillingLongitude</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Longitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExId__c</fullName>
        <externalId>true</externalId>
        <label>ExId</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>sync</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>